[package]
name = "mmrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
clap = { version = "4.0.29", features = ["derive"] }
trauma = "2.2.4"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
error-chain = "0.12.4"
indicatif = "0.17.7"
rand = "0.8.5"
futures-util = "0.3.28"
mnt = "0.3.1"
rust-ini = "0.19.0"
openssl = { version = "0.10", features = ["vendored"] }