[package]
name = "mmrl"
description = "MMRL comes now as command line interface, with multi module install support!"
version = "0.3.3"
edition = "2021"
author = "Der_Googler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
clap = { version = "4.0.29", features = ["derive"] }
trauma = "2.2.4"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
error-chain = "0.12.4"
indicatif = "0.17.7"
rand = "0.8.5"
futures-util = "0.3.28"
rust-ini = "0.19.0"
zip = "0.6.6"
serde_ini = "0.2.0"
regex = "1.10.2"
async-recursion = "1.0.5"
openssl = { version = "0.10.45", features = ["vendored"] }
url = "2.2"
git2 = "0.18.1"
walkdir = "2.4.0"

[dependencies.confy]
features = ["toml_conf"]
default-features = false
